Add a new endpoint to return the image url for a (service, deploy group)
I feel like I've wanted this before - but now I need it for use in
Airflow (to ensure folks aren't hardcoding tags and whatnot for the
service images they're using) :p

NOTE: this is mostly `claude` with some hand-holding - I'll be adding a
Skill to add endpoints in an upcoming PR
