# paasta_tools/paastaapi/api/service_api.py
@@ -23,6 +23,7 @@ from paasta_tools.paastaapi.model_utils import (  # noqa: F401
     none_type,
     validate_and_convert_types
 )
+from paasta_tools.paastaapi.model.container_image import ContainerImage
 from paasta_tools.paastaapi.model.flink_cluster_overview import FlinkClusterOverview
 from paasta_tools.paastaapi.model.flink_config import FlinkConfig
 from paasta_tools.paastaapi.model.flink_job_details import FlinkJobDetails
@@ -297,6 +298,132 @@ class ServiceApi(object):
             },
             api_client=api_client,
             callable=__delay_instance
+        )
+
+        def __get_container_image_url(
+            self,
+            service,
+            deploy_group,
+            **kwargs
+        ):
+            """Get container image URL for service and deploy_group  # noqa: E501
+
+            This method makes a synchronous HTTP request by default. To make an
+            asynchronous HTTP request, please pass async_req=True
+
+            >>> thread = api.get_container_image_url(service, deploy_group, async_req=True)
+            >>> result = thread.get()
+
+            Args:
+                service (str): Service name
+                deploy_group (str): Deploy group name
+
+            Keyword Args:
+                _return_http_data_only (bool): response data without head status
+                    code and headers. Default is True.
+                _preload_content (bool): if False, the urllib3.HTTPResponse object
+                    will be returned without reading/decoding response data.
+                    Default is True.
+                _request_timeout (float/tuple): timeout setting for this request. If one
+                    number provided, it will be total request timeout. It can also
+                    be a pair (tuple) of (connection, read) timeouts.
+                    Default is None.
+                _check_input_type (bool): specifies if type checking
+                    should be done one the data sent to the server.
+                    Default is True.
+                _check_return_type (bool): specifies if type checking
+                    should be done one the data received from the server.
+                    Default is True.
+                _host_index (int/None): specifies the index of the server
+                    that we want to use.
+                    Default is read from the configuration.
+                async_req (bool): execute request asynchronously
+
+            Returns:
+                ContainerImage
+                    If the method is called asynchronously, returns the request
+                    thread.
+            """
+            kwargs['async_req'] = kwargs.get(
+                'async_req', False
+            )
+            kwargs['_return_http_data_only'] = kwargs.get(
+                '_return_http_data_only', True
+            )
+            kwargs['_preload_content'] = kwargs.get(
+                '_preload_content', True
+            )
+            kwargs['_request_timeout'] = kwargs.get(
+                '_request_timeout', None
+            )
+            kwargs['_check_input_type'] = kwargs.get(
+                '_check_input_type', True
+            )
+            kwargs['_check_return_type'] = kwargs.get(
+                '_check_return_type', True
+            )
+            kwargs['_host_index'] = kwargs.get('_host_index')
+            kwargs['service'] = \
+                service
+            kwargs['deploy_group'] = \
+                deploy_group
+            return self.call_with_http_info(**kwargs)
+
+        self.get_container_image_url = Endpoint(
+            settings={
+                'response_type': (ContainerImage,),
+                'auth': [],
+                'endpoint_path': '/services/{service}/container_image/{deploy_group}',
+                'operation_id': 'get_container_image_url',
+                'http_method': 'GET',
+                'servers': None,
+            },
+            params_map={
+                'all': [
+                    'service',
+                    'deploy_group',
+                ],
+                'required': [
+                    'service',
+                    'deploy_group',
+                ],
+                'nullable': [
+                ],
+                'enum': [
+                ],
+                'validation': [
+                ]
+            },
+            root_map={
+                'validations': {
+                },
+                'allowed_values': {
+                },
+                'openapi_types': {
+                    'service':
+                        (str,),
+                    'deploy_group':
+                        (str,),
+                },
+                'attribute_map': {
+                    'service': 'service',
+                    'deploy_group': 'deploy_group',
+                },
+                'location_map': {
+                    'service': 'path',
+                    'deploy_group': 'path',
+                },
+                'collection_format_map': {
+                }
+            },
+            headers_map={
+                'accept': [
+                    'application/json'
+                ],
+                'content_type': [],
+            },
+            api_client=api_client,
+            callable=__get_container_image_url
         )
 
         def __get_flink_cluster_config(
